--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="C:\Users\soory\OneDrive\Pictures\naruto.jpg" width="400" height="250" alt=""></td>
+        <td><img src="img/naruto.jpg" width="400" height="250" alt=""></td>
         <td>  <h1>
             🦊NARUTO
           </h1>
